---
title: Rollective Application
---
erDiagram
    users {
        int id
        string name
        string username
        string email
        string password
        string picture
        string biography
        string location
        string created_at
        string updated_at
    }
    
    frames {
        int id
        int user_id
        string slug
        string image
        string caption
        string location
        string camera
        string lens
        string film
        string lab
        string created_at
        string updated_at
    }
    
    comments {
        int id
        int user_id
        int frame_id
        string text
        string created_at
        string updated_at        
    }
    
    rolls {
        int id
        string name
        string emoji
        string created_at
        string updated_at
    }
    
    frame_roll {
        int id
        int roll_id
        int frame_id
    }
    
    users ||--o{ frames : "has"
    users ||--o{ comments : "writes"
    frames ||--o{ comments : "has"
    frames ||--o{ frame_roll : "belongs to"
    rolls ||--o{ frame_roll : "contains"
